# fin-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  db.py  docker-compose.yml  llm_classifier.py  main.py  models.py  pyproject.toml  services.py
docs/: requirements.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: ImportCSVDialog.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx
frontend/src/lib/: format.ts
frontend/src/pages/: Budgets.tsx  Categories.tsx  Dashboard.tsx  EmergencyFund.tsx  FinancialHealth.tsx  Goals.tsx  Insurance.tsx  Investments.tsx  NetWorth.tsx  Profile.tsx  Recurring.tsx  Retirement.tsx  Transactions.tsx
migrations/: env.py
routes/: budgets.py  categories.py  common.py  dashboard.py  dashboard_note.py  emergency_fund.py  goals.py  health_score.py  insurance.py  investments.py  net_worth.py  profile.py  recurring.py  reports.py  retirement.py  transactions.py
scripts/: migrate_to_postgres.py
services/: __init__.py  budgets.py  categories.py  common.py  dashboard.py  dashboard_note.py  emergency_fund.py  extract_transactions.py  goals.py  health_score.py  insurance.py  investments.py  net_worth.py  pdf_import.py  profile.py  recurring.py  reports.py  retirement.py  transactions.py
